[metadata]
name = srun-cli-bit
version = 0.1.1
author = Cai Mingyang
author_email = cai.my@outlook.com
description = A cli tool for BIT campus network.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/c-my/srun-cli-bit
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    srun-bit=srunbit.cli:execute
